--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="20dp" />
-    <gradient
-        android:startColor="#FA275A"
-        android:endColor="#DAACAC"
-        android:angle="270" />
+    <solid android:color="#FA275A" />
+
 </shape>
