--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="0dp" />
+    <corners android:radius="10dp" />
     <solid android:color="#ee9ca7" />
     <gradient
         android:type="linear"
-        android:startColor="#C8E8B1"
-        android:endColor="#DFE6C5"
+        android:startColor="#FA275A"
+        android:endColor="#FA275A"
         android:angle="0" />
 </shape>
