--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -3,13 +3,13 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="@color/gray" />
+        android:color="#FA275A" />
     <corners
-        android:radius="16dp" />
+        android:radius="15dp" />
     <solid android:color="@android:color/white" />
-    <gradient
-        android:type="linear"
-        android:startColor="#a1c4fd "
-        android:endColor="#c2e9fb"
-        android:angle="0" />
+<!--    <gradient-->
+<!--        android:type="linear"-->
+<!--        android:startColor="#a1c4fd "-->
+<!--        android:endColor="#c2e9fb"-->
+<!--        android:angle="0" />-->
 </shape>
