--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.cart.CartPage">
+    tools:context=".ui.cart.CartPage"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="16dp"
-        >
+        android:layout_margin="10dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -19,87 +20,94 @@
             android:gravity="center"
             android:textSize="24sp"
             android:textColor="#FA275A"
-            android:layout_marginBottom="8dp"
-            android:text="Cart" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/gray"
-            android:layout_margin="5dp"/>
+            android:text="Giỏ hàng" />
 
     </LinearLayout>
 
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="480dp"
         android:divider="@android:color/darker_gray"
         android:isScrollContainer="false"
-        android:dividerHeight="1dp"/>
+        android:dividerHeight="1dp"
+        android:layout_gravity="top"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_marginBottom="5dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Tổng thanh toán" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Số lượng" />
-
-
-        </LinearLayout>
+        android:orientation="vertical"
+        android:layout_gravity="bottom">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/totalAmount"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Tổng thanh toán" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Số lượng" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="viewEnd"
-                android:textSize="20sp"
-                android:text="48.000 đ" />
+                android:layout_gravity="right"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView_quantity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="viewEnd"
-                android:textSize="20sp"
-                android:text="2" />
+                <TextView
+                    android:id="@+id/totalAmount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewEnd"
+                    android:textSize="20sp"
+                    android:text="48.000 đ" />
+
+                <TextView
+                    android:id="@+id/textView_quantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewEnd"
+                    android:textSize="20sp"
+                    android:text="2" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
+        <Button
+            android:id="@+id/btnPayment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FA275A"
+            android:text="Thanh toán ngay"
+            android:textColor="#FFF"
+            android:background="@drawable/textview_border"/>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnPayment"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="16dp"
-        android:backgroundTint="#FA275A"
-        android:text="Thanh toán ngay" />
 
 
 
