--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,73 +8,97 @@
     tools:context=".ui.home.HomePage"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="130dp"
             android:text="Menu tới ngay"
             android:textSize="22dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"/>
 
-        <ImageButton
-            android:id="@+id/btnPerson"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
-            android:contentDescription="Person"
-            android:minHeight="50dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ic_personal" />
+            android:gravity="right"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btnPerson"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:contentDescription="Person"
+                android:minHeight="50dp"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_personal" />
 
-        <ImageButton
-            android:id="@+id/btnCart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
-            android:contentDescription="Cart"
-            android:minHeight="50dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ic_cart" />
+            <ImageButton
+                android:id="@+id/btnCart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:contentDescription="Cart"
+                android:minHeight="50dp"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_cart" />
 
+        </LinearLayout>
     </LinearLayout>
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-
-    <include layout="@layout/navigation_bar" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPaper"
-        android:layout_width="370dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center"
-        android:background="@drawable/rounded_corner"
-        android:contentDescription="Carousel"
+        android:layout_height="40dp"
+        android:background="@drawable/searchview_border"
         android:layout_marginBottom="10dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hôm nay ăn gì?"
-        android:textSize="18dp"
-        android:textStyle="bold"/>
 
-    <GridView
-        android:id="@+id/gridViewStore"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <!--    <include layout="@layout/navigation_bar" />-->
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewPaper"
+                android:layout_width="370dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:background="@drawable/rounded_corner"
+                android:contentDescription="Carousel"
+                android:layout_marginBottom="10dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hôm nay ăn gì?"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"/>
+
+            <com.example.bewithyou.ExpandableHeightGridView
+                android:id="@+id/gridViewStore"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="20dp"
+                android:gravity="center"
+                android:horizontalSpacing="2dp"
+                android:isScrollContainer="false">
+
+            </com.example.bewithyou.ExpandableHeightGridView>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 
 </LinearLayout>
