--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -9,17 +9,21 @@
     android:layout_height="match_parent"
     tools:context=".ui.auth.RegisterPage">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_margin="16dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_logo" />
 
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:hint="Email"
-        android:padding="10dp"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:background="@drawable/textview_border"
         android:id="@+id/email"/>
 
@@ -27,19 +31,22 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="Password"
-        android:padding="10dp"
+        android:hint="Mật khẩu"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:background="@drawable/textview_border"
         android:id="@+id/password"/>
 
     <Button
         android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_marginTop="15sp"
-        android:text="LOGIN"
-        android:textSize="11dp"
-        android:padding="7dp"
-        android:background="@drawable/textview_border"
+        android:text="Đăng nhập"
+        android:textSize="15dp"
+        android:background="@drawable/custom_button"
+        android:textColor="#FFF"
         android:id="@+id/login"/>
 
     <TextView
@@ -48,7 +55,7 @@
         android:text="Don't have an account? Register"
         android:gravity="center"
         android:layout_marginTop="15dp"
-        android:textColor="#3C31DD"
+        android:textColor="#0080FF"
         android:id="@+id/register_user"/>
 
 </LinearLayout>
