--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -2,9 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-
     android:layout_height="match_parent">
-    <include layout="@layout/navigation_bar" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,25 +10,25 @@
         android:background="@drawable/rounded_corner"
         >
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_picture"
-            android:layout_width="144dp"
+            android:layout_margin="16dp"
+            android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="32dp"
-            android:layout_gravity="center"
-            android:src="@drawable/round_back_while_stroke" />
+            android:src="@drawable/avt"
+            android:layout_gravity="center"/>
 
         <TextView
             android:id="@+id/username_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/profile_picture"
-            android:layout_margin="10dp"
             android:layout_gravity="center"
             android:textSize="30dp"
             android:layout_centerHorizontal="true"
-            android:text="Username" />
+            android:text="Username"
+            android:textColor="#FFF"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/phone_num_text"
             android:layout_width="wrap_content"
@@ -39,7 +37,8 @@
             android:layout_margin="12dp"
             android:layout_gravity="center"
             android:textSize="15dp"
-            android:text="Phone Number" />
+            android:text="Phone Number"
+            android:textColor="#FFF"/>
 
     </LinearLayout>
 
@@ -64,7 +63,6 @@
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
-
                 android:drawableRight="@drawable/ic_arrow"
                 android:drawableLeft="@drawable/ic_ship"
                 android:backgroundTint="@color/white" />
@@ -98,14 +96,14 @@
                 android:drawableRight="@drawable/ic_arrow"
                 android:backgroundTint="@color/white" />
             <Button
-                android:id="@+id/btnLogOut"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="Cart"
-                android:drawableRight="@drawable/ic_arrow"
-                android:backgroundTint="@color/white" />
-
+                android:layout_height="45dp"
+                android:layout_marginTop="25sp"
+                android:text="Đăng xuất"
+                android:textSize="15dp"
+                android:background="@drawable/custom_button"
+                android:textColor="#FFF"
+                android:id="@+id/btnLogOut"/>
         </LinearLayout>
 
     </LinearLayout>
