--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -15,8 +15,8 @@
         android:layout_marginRight="20dp"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:id="@+id/txtName"
@@ -27,23 +27,24 @@
 
         <TextView
             android:id="@+id/txtDescription"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Description Name"/>
 
-        <RatingBar
+        <me.zhanghai.android.materialratingbar.MaterialRatingBar
             android:id="@+id/ratingBar"
-            android:layout_width="246dp"
-            android:layout_height="59dp"
+            android:layout_width="80dp"
+            android:layout_height="20dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="25dp"
+            android:contentDescription="Rating Stars"
+            android:isIndicator="true"
+            android:maxHeight="50dp"
+            android:minHeight="50dp"
             android:numStars="5"
+            android:progressTint="#FA275A"
             android:rating="0"
-            android:stepSize="1"
-            android:scaleX="0.5"
-            android:scaleY="0.5"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.38"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:stepSize="1" />
     </LinearLayout>
 
 
