--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,9 +8,6 @@
     android:layout_margin="5dp"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,16 +59,6 @@
                 android:layout_height="2dp"
                 android:background="@color/gray"
                 android:layout_margin="5dp"/>
-            <EditText
-                android:id="@+id/tv_note"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="   Ghi chú thêm cho món này"
-                android:padding="@dimen/df_padding"
-                android:layout_margin="@dimen/df_margin"
-                android:background="@drawable/on_select_border"
-                android:drawableLeft="@drawable/ic_note_button"
-                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -117,7 +104,7 @@
                 <Button
                     android:id="@+id/btn_addtocart"
                     android:layout_width="wrap_content"
-                    android:layout_height="44dp"
+                    android:layout_height="48dp"
                     android:textSize="@dimen/normal_textSize"
                     android:textColor="@color/white"
                     android:layout_marginLeft="5dp"
@@ -128,5 +115,4 @@
                 </Button>
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+</ScrollView>
