--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailProductActivity"
+    tools:context=".ui.product.DetailProductActivity"
     android:layout_margin="5dp"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">
@@ -76,7 +76,7 @@
                         android:layout_width="15dp"
                         android:layout_height="24dp"
                         android:layout_margin="10dp"
-                        android:background="@drawable/ic_substract"
+                        android:background="@drawable/ic_minus"
                         android:contentDescription="minus"
                         >
                     </Button>
