--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -108,7 +108,7 @@
                     android:textSize="@dimen/normal_textSize"
                     android:textColor="@color/white"
                     android:layout_marginLeft="5dp"
-                    android:text="Add to cart"
+                    android:text="Thêm vào giỏ"
                     android:paddingRight="20dp"
                     android:paddingLeft="20dp"
                     android:background="@drawable/textview_border">
