--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -22,7 +22,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="470dp">
+        android:layout_height="620dp">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -32,7 +32,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginBottom="10dp">
-
 
                 <Button
                     android:id="@+id/btnStoreAddress"
@@ -89,7 +88,7 @@
             <com.example.bewithyou.ExpandableHeightGridView
                 android:id="@+id/gvItems"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:divider="@android:color/darker_gray"
                 android:dividerHeight="1dp" />
         </LinearLayout>
